force-app/main/default/objects/Account/fields/Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>Congressional_District__c</fullName>
    <label>Congressional District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Congressional_District</valueSetName>
    </valueSet>
</CustomField>