force-app/main/default/objects/Account/fields/Copy_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Mailing_Address__c</fullName>
    <label>Copy Mailing Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add seperate addresses</fullName>
            </value>
            <value>
                <fullName>Mailing Same as Shipping Address</fullName>
            </value>
            <value>
                <fullName>Shipping Same as Mailing Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>