force-app/main/default/objects/Account/fields/Feature_Interest__c.field-meta.xml
<CustomField>
    <fullName>Feature_Interest__c</fullName>
    <inlineHelpText>So many features, and more to come!</inlineHelpText>
    <label>Feature Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Features</valueSetName>
    </valueSet>
</CustomField>