force-app/main/default/objects/Account/fields/FlowToolKit__cUnite_Is_Volunteer_Group__c.field-meta.xml
<CustomField>
    <fullName>FlowToolKit__cUnite_Is_Volunteer_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used with the Flow Tool Kit: V4S extension</description>
    <label>Is Volunteer Group</label>
    <type>Checkbox</type>
</CustomField>