force-app/main/default/objects/Account/fields/FlowToolKit__cUnite_Volunteer_Location__c.field-meta.xml
<CustomField>
    <fullName>FlowToolKit__cUnite_Volunteer_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this for Accounts that host volunteer opportunities.</description>
    <inlineHelpText>Check this for Accounts that host volunteer opportunities.</inlineHelpText>
    <label>Volunteer Location</label>
    <type>Checkbox</type>
</CustomField>