force-app/main/default/objects/Account/fields/Regional_Office__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>